# RenderLab

./: .gitmodules  CMakeLists.txt  LICENSE
include/: renderer.h
source/: grayPixelShader.hlsl  main.cpp  pixelShader.hlsl  renderer.cpp  shaders.hlsl
